--- a/src/luca/DepthAnalysis.Rmd
+++ b/src/luca/DepthAnalysis.Rmd
@@ -3,6 +3,7 @@ library(hexbin)
 library(ggplot2)
 library(roahd)
 library("fdatest")
+library(spatstat.geom)
 ```
 
 # load and preprocess the data
@@ -47,12 +48,15 @@ survey_data$abitanti.citta <- droplevels(survey_data$abitanti.citta)
 
 
 ```
+
 # combine the data
+
 ```{r}
 combined_data <- merge(data_numeric_cleaned, survey_data, by.x = "id", by.y = "id")
 ```
 
 # single ecdf
+
 ```{r}
 person_id <- "03Nplw4GO2h5ut5"  # Sostituisci con l'ID della persona desiderata
 covariate <- "danceability"  # Sostituisci con la covariata desiderata
@@ -60,15 +64,30 @@ covariate <- "danceability"  # Sostituisci con la covariata desiderata
 # Seleziona le osservazioni per la persona specifica
 person_data <- combined_data[combined_data$id == person_id, ]
 
+# Funzione per creare un vettore di pesi esponenziali
+create_exponential_weights <- function(n, alpha) {
+  weights <- exp(-alpha * seq(0, n-1))
+  return(weights)
+}
+
+# Calcola il numero di osservazioni
+n <- nrow(person_data)
+
+# Calcola i pesi esponenziali
+alpha <- 0.1  # Puoi regolare il valore di alpha
+weights_ecdf <- create_exponential_weights(n, alpha)
+
 # Calcola l'EDF per la covariata specifica
-edf <- ecdf(person_data[[covariate]])
+edf <- spatstat.geom::ewcdf(person_data[[covariate]], weights = weights_ecdf, normalise = TRUE)
 
 # Visualizza l'EDF
 plot(edf, main = paste("EDF for", covariate, "for Person", person_id),
      xlab = covariate, ylab = "Empirical Probability")
 
 ```
+
 #ecdf per una covariata musica
+
 ```{r}
 # Esempio di calcolo della profondità della funzione per una covariata specifica
 covariate <- "energy"  # Sostituisci con la covariata desiderata
@@ -76,7 +95,7 @@ covariate <- "energy"  # Sostituisci con la covariata desiderata
 # Creare una lista di EDF per tutte le persone
 edf_list <- lapply(unique(combined_data$id), function(person_id) {
   person_data <- combined_data[combined_data$id == person_id, ]
-  ecdf(person_data[[covariate]])
+  spatstat.geom::ewcdf(person_data[[covariate]], weights = weights_ecdf, normalise = TRUE)
 })
 
 plot(NULL, xlim = c(0, 1), ylim = c(0, 1),
@@ -88,7 +107,9 @@ for (i in seq_along(edf_list)) {
   lines(edf_list[[i]], lwd = 0.5, cex = 0.1)
 }
 ```
+
 # funzione "esternata" for debugging
+
 ```{r}
 music_vars = colnames(data_numeric_cleaned)[1:13]
 survey_covs = colnames(survey_data)[3:19]
@@ -141,11 +162,12 @@ plot_ecdf(music_cov,survey_cov,edf_list,color_palette,median_curve_list)
 ```
 
 # auxiliarry functions
+
 ```{r}
 grid <- seq(0, 1, length.out = 50)
 create_edf_list <- function(music_cov){
   edf_list <-  lapply(unique(combined_data$id), function(person_id) {
-    ecdf <- ecdf(combined_data[combined_data$id == person_id,music_cov ])
+    ecdf <- spatstat.geom::ewcdf(combined_data[combined_data$id == person_id,music_cov ],weights = weights_ecdf, normalise = TRUE)
     val = ecdf(grid)
     return(val)
   })
@@ -193,6 +215,7 @@ create_factors <- function(indices_list){
 ```
 
 # depth function
+
 ```{r}
 depth_covcov <- function(music_cov, survey_cov){ 
   # Creare una lista di EDF per tutte le persone
@@ -244,6 +267,7 @@ depth_covcov("popularity","abitanti.citta"  )
 ```
 
 # covariata persona fissata
+
 ```{r,warning=FALSE}
 for(m in music_vars){
   depth_covcov(m,"libri")
@@ -251,6 +275,7 @@ for(m in music_vars){
 ```
 
 # all music all survey covs
+
 ```{r,warning=FALSE}
 music_vars = colnames(data_numeric_cleaned)[1:12]
 music_vars = music_vars[!(music_vars %in% c("year","duration"))]
@@ -270,13 +295,13 @@ for(m in music_vars){
 }
 print(unique(missed_vars))
 ```
+
 ```{r}
 for (i in unique(missed_vars)){
   print(table(survey_data[,i]))
   print("------")
 }
 ```
-
 
 ```{r}
 ITPaovbspline(
@@ -292,8 +317,6 @@ ITPimage(ITP.result, alpha = 0.05, abscissa.range = c(0, 1), nlevel = 20)
 
 ```
 
-
-
 ```{r}
 gruppi_lista <- list(
   malati = c(2, 5, 6, 7, 9, 13, 15, 17, 18, 20, 23, 27, 29, 30, 33, 34, 35, 36, 40, 41, 52, 54, 55, 56, 60, 63, 64, 69),
@@ -301,9 +324,6 @@ gruppi_lista <- list(
 )
 
 ```
-
-
-
 
 ```{r}
 data(NASAtemp)
@@ -322,8 +342,3 @@ summary(IWT.result)
 plot(IWT.result)
 
 ```
-
-
-
-
-
