--- a/src/luca/DepthAnalysis.Rmd
+++ b/src/luca/DepthAnalysis.Rmd
@@ -177,7 +177,7 @@ weights_ecdf <- create_exponential_weights(n, alpha)
 music_vars = colnames(data_numeric_cleaned)[1:12]
 music_vars = music_vars[!(music_vars %in% c("year","duration"))]
 survey_covs = colnames(survey_data)[1:16]
-survey_covs = survey_covs[!(survey_covs %in% c("genere"))]
+survey_covs = survey_covs[!(survey_covs %in% c("genere","id"))]
 
 
 ```
@@ -191,47 +191,42 @@ ii = 8
 jj = 1
 music_cov = music_vars[[ii]]
 survey_cov =  survey_covs[[jj]]
-survey_cov = "abitanti.citta"
+survey_cov = "stato"
 music_cov = "popularity"
-# Creare una lista di EDF per tutte le persone
-edf_list <- create_edf_list(music_cov)
-matrice_da_lista_all <- do.call(cbind, edf_list)
-f_data_all = fData(grid, t(matrice_da_lista_all))
-
-# Definisci una palette di colori in base ai valori unici nella colonna di gruppo
-unique_groups = levels(as.factor(combined_data[,survey_cov]))
-num_groups <- length(unique_groups)
-color_palette <- rainbow(num_groups)
-indices_list <- create_indices_list(unique_groups,survey_cov)  
-
-
-factor_aov_vect <- create_factors(indices_list)
-response = t(matrice_da_lista_all)
-resutl_aov = IWTaov(response ~factor_aov_vect)
-pval = summary(resutl_aov)$factors[[1]]
-
-if(pval<0.05)
-  print(paste("found match", music_cov, survey_cov))
-
-
-median_curve_list <- list()
-relative_BD_list <- list()
-
-for (i in 1:num_groups) {
-  matrice_da_lista_i <- do.call(cbind, edf_list[indices_list[[i]]])
-  f_data = fData(grid, t(matrice_da_lista_i))
-  median_curve_list[[i]] <- median_fData(fData = f_data, type = "MBD")
-
-  #relative depth function
-  relative_BD_result <- BD_relative(median_curve_list[[i]], f_data_all)
+soglia_pvalue = 0.05
   
-  # Memorizza il risultato insieme al nome del gruppo
-  relative_BD_list[[i]] <- list(group_name = unique_groups[i], result = relative_BD_result)
-}
-for (i in 1:num_groups)
-  print(paste(paste("Group:", relative_BD_list[[i]]$group_name),relative_BD_list[[i]]$result))
-#plot_ecdf(music_cov,survey_cov,edf_list,color_palette,median_curve_list)
+  # Creare una lista di EDF per tutte le persone
+  edf_list <- create_edf_list(music_cov)
+  matrice_da_lista_all <- do.call(cbind, edf_list)
+  response = t(matrice_da_lista_all)
+  #f_data_all = fData(grid, response)
+  
+  # Definisci una palette di colori in base ai valori unici nella colonna di gruppo
+  unique_groups = levels(as.factor(combined_data[,survey_cov]))
 
+  indices_list <- create_indices_list(unique_groups,survey_cov)  
+  
+  factor_vect <- create_factors(indices_list)
+  
+  if(length(unique_groups)>2){
+      result_test = IWTaov(response ~ factor_vect)
+      pval = summary(result_test)$factors[[1]]
+    if(pval<soglia_pvalue){
+      IWTimage(result_test)
+      print(paste(c(music_cov,"--",survey_cov)))
+    }
+      
+      
+  }else{
+    data1 = response[indices_list[[1]],]
+    data2 = response[indices_list[[2]],]
+    result_test = IWT2(data1, data2, mu = 0)
+    
+    if(min(result_test$adjusted_pval)<soglia_pvalue){
+      IWTimage(result_test,abscissa_range=c(0,12))
+      print(paste(c(music_cov,"--",survey_cov)))
+    }
+  }
 ```
 
 # IWT
@@ -286,19 +281,70 @@ val = IWT_covcov("liveness","educazione")
 
 
 ```{r}
-results_IWT = list()
-k = 1
-for(m in music_vars[1:7]){
-  print(m)
-  for (s in survey_covs[1:10]){
-    print(s)
-    results_IWT[[k]] = IWT_covcov(m,s)
-    k = k+1
+covariate_iterator <- function(){
+  results_IWT = list()
+  k = 1
+  for(m in music_vars){
+    print(m)
+    for (s in survey_covs){
+      print(s)
+      results_IWT[[k]] = IWT_covcov(m,s)
+      k = k+1
+    }
   }
+  
+  # for( i in 1:length(results_IWT))
+  #   if(!is.null(results_IWT[[i]]))
+  #       print(results_IWT[[i]])
+  
+  return(results_IWT)
 }
-print(results_IWT)
+
+results_IWT_list <- list()
+alpha_vect = c(0,0.1,0.5,0.7,0.9,1,2)
+index = 1
+for(a in alpha_vect){
+  print(a)
+  weights_ecdf <- create_exponential_weights(n, a)
+  results_IWT_list[[index]] = covariate_iterator()
+  index = index+1
+}
 ```
 
+# SHOW RESULTS
+```{r}
+music_cov_passed = c()
+survey_cov_passed = c()
+for( i in 1:length(results_IWT_list)){
+  sub_list = results_IWT_list[[i]]
+  if(!is.empty(sub_list)){
+    #print(paste0("for alpha = ",alpha_vect[i]))
+    for( j in 1:length(sub_list)){
+      if(!is.null(sub_list[[j]])){
+        #print(sub_list[[j]])
+        music_cov_passed = c(music_cov_passed,sub_list[[j]][1])
+        survey_cov_passed = c(survey_cov_passed,sub_list[[j]][3])
+      }
+
+    }
+  }
+}
+
+print(paste0("music_covs = ",unique(music_cov_passed)))
+print(paste0("survey_covs = ",unique(survey_cov_passed)))
+```
+[1] "music_covs = popularity"   "music_covs = acousticness"
+[3] "music_covs = liveness"    
+ [1] "survey_covs = sesso"              
+ [2] "survey_covs = campo.studi"        
+ [3] "survey_covs = stato"              
+ [4] "survey_covs = lavoro"             
+ [5] "survey_covs = importanza.musica"  
+ [6] "survey_covs = come.ascolti.musica"
+ [7] "survey_covs = politica"           
+ [8] "survey_covs = regione"            
+ [9] "survey_covs = abitanti.citta"     
+[10] "survey_covs = educazione"   
 
 # depth function
 ```{r}
